added args4j lib. minor refactoring